Change "ImageMagick" to "Open ImageMagick".

--- a/www/api.html
+++ b/www/api.html
@@ -3,9 +3,9 @@
 <HTML>
 <HEAD>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>C API: ImageMagick - Image Processing and Display Package</title>
-   <meta name="description" content="ImageMagick is a    robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG,    PNG, PDF, and Photo CD.  With ImageMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,    sharpen, color reduce, or add special effects to an image and save your    completed work in the same or  differing image format.">
-   <meta name="keywords" content="ImageMagick, Image Magick, Image Magic,    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
+   <title>C API: Open ImageMagick - Image Processing and Display Package</title>
+   <meta name="description" content="Open ImageMagick is a    robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG,    PNG, PDF, and Photo CD.  With Open ImageMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,    sharpen, color reduce, or add special effects to an image and save your    completed work in the same or  differing image format.">
+   <meta name="keywords" content="Open ImageMagick, Image Magick, Image Magic,    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
    <link rel="StyleSheet" href="magick.css" type="text/css">
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#0085c0" vlink="#800080" alink="#0085c0" >
@@ -17,7 +17,7 @@
 
 <p><br>
 <br>
-<p><b>ImageMagick</b> has a number of functions that allow you to read,
+<p><b>Open ImageMagick</b> has a number of functions that allow you to read,
 manipulate, write, or display an image. These functions are accessible
 through the various <a href="tools.html">tools</a> or the object-oriented
 Perl interface, <a href="perl.html">PerlMagick</a>. However, you can also
@@ -29,15 +29,15 @@ depending on your system.
 <p>The API is divided into a number of categories:
 <dl>
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/constitute.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/constitute.html">Open ImageMagick
 Methods to Constitute an Image</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/composite.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/composite.html">Open ImageMagick
 Methods to Composite an Image</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/image.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/image.html">Open ImageMagick
 Image Methods</a></dd>
 
 <dd>
@@ -69,15 +69,15 @@ to Shear or Rotate an Image by an Arbitrary Angle</a></dd>
 to Enhance an Image</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/effect.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/effect.html">Open ImageMagick
 Image Effects Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/fx.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/fx.html">Open ImageMagick
 Special Effects Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/decorate.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/decorate.html">Open ImageMagick
 Image Decoration Methods</a></dd>
 
 <dd>
@@ -101,7 +101,7 @@ to Draw on an Image</a></dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/draw.html">Image Vector Drawing Methods </a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/montage.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/montage.html">Open ImageMagick
 Methods to Create Image Thumbnails</a></dd>
 
 <dd>
@@ -121,7 +121,7 @@ to Get or Set Image Pixels</a></dd>
 with Image Lists</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/cache_view.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/cache_view.html">Open ImageMagick
 Cache Views Methods</a></dd>
 
 <dd>
@@ -134,34 +134,34 @@ to Read or Write Binary Large OBjects</a></dd>
 
 <dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/magick.html">Methods
-to Read or List ImageMagick Image formats</a></dd>
+to Read or List Open ImageMagick Image formats</a></dd>
 
 <dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/signature.html">Methods
 to Compute a Message Digest for an Image</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/registry.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/registry.html">Open ImageMagick
 Registry Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/error.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/error.html">Open ImageMagick
 Error Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/memory.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/memory.html">Open ImageMagick
 Memory Allocation Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/resource.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/resource.html">Open ImageMagick
 Resource Consumption Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/monitor.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/monitor.html">Open ImageMagick
 Progress Monitor Methods</a></dd>
 
 <dd>
-<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/deprecate.html">ImageMagick
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/deprecate.html">Open ImageMagick
 Deprecated Methods</a></dd>
 </dl>
 <p>
@@ -243,11 +243,11 @@ to display a smiley face on your X server.
 For C++, use:
 <pre>&nbsp;&nbsp;&nbsp; g++ `Magick++-config --cxxflags --cppflags` demo.cpp `Magick++-config --ldflags --libs`</pre>
 <hr>
-<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
-ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
-ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
 </body>
