--- a/www/conjure.html
+++ b/www/conjure.html
@@ -3,15 +3,15 @@
 <HTML>
 <HEAD>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>conjure: ImageMagick - Image Processing and Display Package</title>
-   <meta name="description" content="ImageMagick is a robust collection of
+   <title>conjure: Open ImageMagick - Image Processing and Display Package</title>
+   <meta name="description" content="Open ImageMagick is a robust collection of
    tools and libraries to read, write, and manipulate an image in any of the
    more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.
-   With ImageMagick you can create GIFs dynamically making it suitable for
+   With Open ImageMagick you can create GIFs dynamically making it suitable for
    Web applications.  You can also resize, rotate, sharpen, color reduce, or
    add special effects to an image and save your completed work in the same
    or  differing image format.">
-   <meta name="keywords" content="conjure, ImageMagick, Image Magick, Image Magic,
+   <meta name="keywords" content="conjure, Open ImageMagick, Image Magick, Image Magic,
    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,
    WebMagick, Web Magic, visualization, image processing, software development,
    simulation, image, software, AniMagick, Animagic, Magick++">
@@ -135,7 +135,7 @@ PerlMagick, unless otherwise noted.
 April 2002.
 <br>&nbsp;<br>
 <p>
-This early announcement is to allow ImageMagick users to contribute ideas 
+This early announcement is to allow Open ImageMagick users to contribute ideas 
 early in the process so when the scripting language is released it will
 be useful/stable from the get-go!  If you want to contribute suggestions
 about the Magick scripting language (MSL), post them to
@@ -191,7 +191,7 @@ be three different keywords.
 <br>&nbsp;<br>
 <p>
 For a more detailed description of each option, see
-<a href="ImageMagick.html"><em>ImageMagick(1)</em></a>.
+<a href="Open ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
 <br>&nbsp;<br>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -223,7 +223,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-log">-log</a> <i>&lt;string&gt;</i>
+    <a href="Open ImageMagick.html#details-log">-log</a> <i>&lt;string&gt;</i>
 </font></font></font></b></td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -233,7 +233,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-verbose">-verbose</a>
+    <a href="Open ImageMagick.html#details-verbose">-verbose</a>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print detailed information about the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -244,9 +244,9 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-version">-version</a>
+    <a href="Open ImageMagick.html#details-version">-version</a>
 </font></font></font></b></td></tr></table>
-<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print ImageMagick version string</td></tr></table>
+<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print Open ImageMagick version string</td></tr></table>
 </td></tr></table>
      <p>
 <i><a href="#top">Back to Contents</a></i> 
@@ -432,13 +432,13 @@ color="#FFFFFF"><font size="+1">
 <em>
 John Cristy,
 <a href="mailto:magick-users@imagemagick.org">magick-users@imagemagick.org</a>,
-ImageMagick Studio LLC,<br>
+Open ImageMagick Studio LLC,<br>
 Glenn Randers-Pehrson,
 <a href="mailto:randeg@alum.rpi.edu">randeg@alum.rpi.edu</a>,
-ImageMagick Studio LLC,<br>
+Open ImageMagick Studio LLC,<br>
 Leonard Rosenthol,
 <a href="mailto:magick-users@imagemagick.org">leonardr@lazerware.com</a>,
-ImageMagick Studio LLC.
+Open ImageMagick Studio LLC.
 </em>
 <br>&nbsp;<br>
 </td></tr></table>
@@ -456,40 +456,40 @@ color="#FFFFFF"><font size="+1">
 <table width="94%" border="0" cellspacing="0" cellpadding="8">
 <tr><td width="3%"><br></td><td>
 <p>
-<strong>Copyright (C) 2002 ImageMagick Studio</strong>
+<strong>Copyright (C) 2002 Open ImageMagick Studio</strong>
 <p>
 <strong>Permission is hereby granted, free of charge, to any person obtaining
-a copy of this software and associated documentation files ("ImageMagick"),
-to deal in ImageMagick without restriction, including without limitation
+a copy of this software and associated documentation files ("Open ImageMagick"),
+to deal in Open ImageMagick without restriction, including without limitation
 the rights to use, copy, modify, merge, publish, distribute, sublicense,
-and/or sell copies of ImageMagick, and to permit persons to whom the ImageMagick
+and/or sell copies of Open ImageMagick, and to permit persons to whom the Open ImageMagick
 is furnished to do so, subject to the following conditions:</strong>
 <p>
 <strong>The above copyright notice and this permission notice shall be included
-in all copies or substantial portions of ImageMagick.</strong>
+in all copies or substantial portions of Open ImageMagick.</strong>
 <p>
 <strong>The software is provided "as is", without warranty of any kind, express
 or implied, including but not limited to the warranties of merchantability,
 fitness for a particular purpose and noninfringement.In no event shall
-ImageMagick Studio be liable for any claim, damages or other liability,
+Open ImageMagick Studio be liable for any claim, damages or other liability,
 whether in an action of contract, tort or otherwise, arising from, out
-of or in connection with ImageMagick or the use or other dealings in
-ImageMagick.</strong>
+of or in connection with Open ImageMagick or the use or other dealings in
+Open ImageMagick.</strong>
 <p>
 <strong>Except as contained in this notice, the name of the
-ImageMagick Studio LLC shall not be used in advertising or otherwise to
-promote the sale, use or other dealings in ImageMagick without prior written
-authorization from the ImageMagick Studio.</strong>
+Open ImageMagick Studio LLC shall not be used in advertising or otherwise to
+promote the sale, use or other dealings in Open ImageMagick without prior written
+authorization from the Open ImageMagick Studio.</strong>
 </td></tr></table>
      <p>
 <i><a href="#top">Back to Contents</a></i> 
 &nbsp;</p>
 <hr>
-<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
-ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
-ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
 </body></html>
