--- a/www/cd.html
+++ b/www/cd.html
@@ -3,9 +3,9 @@
 <HTML>
 <HEAD>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>CD: ImageMagick - Image Processing and Display Package</title>
-   <meta name="description" content="ImageMagick is a    robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG,    PNG, PDF, and Photo CD.  With ImageMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,    sharpen, color reduce, or add special effects to an image and save your    completed work in the same or  differing image format.">
-   <meta name="keywords" content="ImageMagick, Image Magick, Image Magic,    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
+   <title>CD: Open ImageMagick - Image Processing and Display Package</title>
+   <meta name="description" content="Open ImageMagick is a    robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG,    PNG, PDF, and Photo CD.  With Open ImageMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,    sharpen, color reduce, or add special effects to an image and save your    completed work in the same or  differing image format.">
+   <meta name="keywords" content="Open ImageMagick, Image Magick, Image Magic,    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
    <link rel="StyleSheet" href="magick.css" type="text/css">
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#0085c0" vlink="#800080" alink="#0085c0" >
@@ -15,15 +15,15 @@
 
 <center><img SRC="../images/magick_small.png" alt="" width="114" height="118"></center>
 
-<p>ImageMagick, version 5.4.7, source and binary distribution is available
+<p>Open ImageMagick, version 5.4.7, source and binary distribution is available
 for a limited time on CD. The CD includes everything that is found at the
-<a href="ftp://ftp.imagemagick.org/pub/ImageMagick/">ImageMagick</a>
+<a href="ftp://ftp.imagemagick.org/pub/Open ImageMagick/">Open ImageMagick</a>
 <tt>ftp</tt> site including Unix, Linux, NT, Win95, and VMS binaries, as
 well as PerlMagick, WebMagick, and the delegates. To receive the CD, send
 $7.50 in US funds (check or money order made out to
-<tt>ImageMagick Studio</tt>)
+<tt>Open ImageMagick Studio</tt>)
 and a self-addressed stamped envelope large enough to accommodate a CD to
-<pre>&nbsp;&nbsp;&nbsp; ImageMagick Studio
+<pre>&nbsp;&nbsp;&nbsp; Open ImageMagick Studio
 &nbsp;&nbsp;&nbsp; P.O. Box 40
 &nbsp;&nbsp;&nbsp; Landenberg, PA&nbsp; 19350
 &nbsp;&nbsp;&nbsp; USA</pre>
@@ -35,14 +35,14 @@ for a one week turnaround although it may be less.
 Olympics</a>.
 <p>Thanks goes to <a href="http://www.sas.com">SAS Institute Inc.</a> for
 volunteering to burn these CD's.
-<p>Note, I have 50 ImageMagick CD's left. When they are gone I cannot guarantee 
+<p>Note, I have 50 Open ImageMagick CD's left. When they are gone I cannot guarantee 
 that more will be produced.
 <hr>
-<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
-ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
-ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
 </body>
