--- a/www/identify.html
+++ b/www/identify.html
@@ -3,15 +3,15 @@
 <HTML>
 <HEAD>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>identify: ImageMagick - Image Processing and Display Package</title>
-   <meta name="description" content="ImageMagick is a robust collection of
+   <title>identify: Open ImageMagick - Image Processing and Display Package</title>
+   <meta name="description" content="Open ImageMagick is a robust collection of
    tools and libraries to read, write, and manipulate an image in any of the
    more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.
-   With ImageMagick you can create GIFs dynamically making it suitable for
+   With Open ImageMagick you can create GIFs dynamically making it suitable for
    Web applications.  You can also resize, rotate, sharpen, color reduce, or
    add special effects to an image and save your completed work in the same
    or  differing image format.">
-   <meta name="keywords" content="conjure, ImageMagick, Image Magick, Image Magic,
+   <meta name="keywords" content="conjure, Open ImageMagick, Image Magick, Image Magic,
    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,
    WebMagick, Web Magic, visualization, image processing, software development,
    simulation, image, software, AniMagick, Animagic, Magick++">
@@ -147,7 +147,7 @@ following, until the set is terminated by the appearance of any option
 or <strong>-noop</strong>.
 <p>
 For a more detailed description of each option, see
-<a href="ImageMagick.html"><em>ImageMagick(1)</em></a>.
+<a href="Open ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
 <br>&nbsp;<br>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -157,7 +157,7 @@ For a more detailed description of each option, see
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-authenticate">-authenticate</a> <i>&lt;string&gt;</i>
+    <a href="Open ImageMagick.html#details-authenticate">-authenticate</a> <i>&lt;string&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>decrypt image with this password</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -168,7 +168,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-cache">-cache</a> <i>&lt;threshold&gt;</i>
+    <a href="Open ImageMagick.html#details-cache">-cache</a> <i>&lt;threshold&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>megabytes of memory available to the pixel cache</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -190,7 +190,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-density">-density</a> <i>&lt;width&gt;x&lt;height&gt;</i>
+    <a href="Open ImageMagick.html#details-density">-density</a> <i>&lt;width&gt;x&lt;height&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>vertical and horizontal resolution in pixels of the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -201,7 +201,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-depth">-depth</a> <i>&lt;value&gt;</i>
+    <a href="Open ImageMagick.html#details-depth">-depth</a> <i>&lt;value&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>depth of the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -212,7 +212,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-format">-format</a> <i>&lt;string&gt;</i>
+    <a href="Open ImageMagick.html#details-format">-format</a> <i>&lt;string&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>output formatted image characteristics</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -234,7 +234,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-interlace">-interlace</a> <i>&lt;type&gt;</i>
+    <a href="Open ImageMagick.html#details-interlace">-interlace</a> <i>&lt;type&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>the type of interlacing scheme</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -245,7 +245,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-limit">-limit</a> <i>&lt;type&gt; &lt;value&gt;</i>
+    <a href="Open ImageMagick.html#details-limit">-limit</a> <i>&lt;type&gt; &lt;value&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>Disk, Map, or Memory resource limit</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -256,7 +256,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-log">-log</a> <i>&lt;string&gt;</i>
+    <a href="Open ImageMagick.html#details-log">-log</a> <i>&lt;string&gt;</i>
 </font></font></font></b></td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
@@ -277,7 +277,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-sampling-factor">-sampling-factor</a> <i>&lt;horizontal_factor&gt;x&lt;vertical_factor&gt;</i>
+    <a href="Open ImageMagick.html#details-sampling-factor">-sampling-factor</a> <i>&lt;horizontal_factor&gt;x&lt;vertical_factor&gt;</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>sampling factors used by JPEG or MPEG-2 encoder and YUV decoder/encoder.</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -288,7 +288,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-size">-size</a> <i>&lt;width&gt;x&lt;height&gt;</i>{<i>+offset</i>}<i></i>
+    <a href="Open ImageMagick.html#details-size">-size</a> <i>&lt;width&gt;x&lt;height&gt;</i>{<i>+offset</i>}<i></i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>width and height of the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -299,7 +299,7 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-verbose">-verbose</a>
+    <a href="Open ImageMagick.html#details-verbose">-verbose</a>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print detailed information about the image</td></tr></table>
 <table BORDER=0 WIDTH="94%">
@@ -310,12 +310,12 @@ width=15><b><font face="Helvetica, Arial"
 ALT=">" BORDER=0 height=14
 width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
-    <a href="ImageMagick.html#details-version">-version</a>
+    <a href="Open ImageMagick.html#details-version">-version</a>
 </font></font></font></b></td></tr></table>
-<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print ImageMagick version string</td></tr></table>
+<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>print Open ImageMagick version string</td></tr></table>
 <p>
 For a more detailed description of each option, see
-<a href="ImageMagick.html"><em>ImageMagick(1)</em></a>.
+<a href="Open ImageMagick.html"><em>Open ImageMagick(1)</em></a>.
 <br>&nbsp;<br>
 </td></tr></table>
      <p>
@@ -335,10 +335,10 @@ color="#FFFFFF"><font size="+1">
 <em>
 John Cristy,
 <a href="mailto:magick-users@imagemagick.org">magick-users@imagemagick.org</a>,
-ImageMagick Studio LLC,<br>
+Open ImageMagick Studio LLC,<br>
 Glenn Randers-Pehrson,
 <a href="mailto:randeg@alum.rpi.edu">randeg@alum.rpi.edu</a>,
-ImageMagick Studio LLC.
+Open ImageMagick Studio LLC.
 </em>
 <br>&nbsp;<br>
 </td></tr></table>
@@ -356,40 +356,40 @@ color="#FFFFFF"><font size="+1">
 <table width="94%" border="0" cellspacing="0" cellpadding="8">
 <tr><td width="3%"><br></td><td>
 <p>
-<strong>Copyright (C) 2002 ImageMagick Studio</strong>
+<strong>Copyright (C) 2002 Open ImageMagick Studio</strong>
 <p>
 <strong>Permission is hereby granted, free of charge, to any person obtaining
-a copy of this software and associated documentation files ("ImageMagick"),
-to deal in ImageMagick without restriction, including without limitation
+a copy of this software and associated documentation files ("Open ImageMagick"),
+to deal in Open ImageMagick without restriction, including without limitation
 the rights to use, copy, modify, merge, publish, distribute, sublicense,
-and/or sell copies of ImageMagick, and to permit persons to whom the ImageMagick
+and/or sell copies of Open ImageMagick, and to permit persons to whom the Open ImageMagick
 is furnished to do so, subject to the following conditions:</strong>
 <p>
 <strong>The above copyright notice and this permission notice shall be included
-in all copies or substantial portions of ImageMagick.</strong>
+in all copies or substantial portions of Open ImageMagick.</strong>
 <p>
 <strong>The software is provided "as is", without warranty of any kind, express
 or implied, including but not limited to the warranties of merchantability,
 fitness for a particular purpose and noninfringement.In no event shall
-ImageMagick Studio be liable for any claim, damages or other liability,
+Open ImageMagick Studio be liable for any claim, damages or other liability,
 whether in an action of contract, tort or otherwise, arising from, out
-of or in connection with ImageMagick or the use or other dealings in
-ImageMagick.</strong>
+of or in connection with Open ImageMagick or the use or other dealings in
+Open ImageMagick.</strong>
 <p>
 <strong>Except as contained in this notice, the name of the
-ImageMagick Studio LLC shall not be used in advertising or otherwise to
-promote the sale, use or other dealings in ImageMagick without prior written
-authorization from the ImageMagick Studio.</strong>
+Open ImageMagick Studio LLC shall not be used in advertising or otherwise to
+promote the sale, use or other dealings in Open ImageMagick without prior written
+authorization from the Open ImageMagick Studio.</strong>
 </td></tr></table>
      <p>
 <i><a href="#top">Back to Contents</a></i> 
 &nbsp;</p>
 <hr>
-<p><a href="../ImageMagick.html"><img SRC="../images/home.png"
-ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+<p><a href="../Open ImageMagick.html"><img SRC="../images/home.png"
+ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><a 
 href="mailto:webmaster@imagemagick.org"><img SRC="../images/mail.png"
-ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
+ALT="Open ImageMagick Home Page" BORDER=0 height=40 width=40
 align=MIDDLE></a><font size="-2">
 Image manipulation software that works like magic.</font>
 </body></html>
